--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: prod
     # env:
-    #   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+    #   FOO: 'bar'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
