--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "scripts": {},
     "devDependencies": {
+        "@rollup/plugin-alias": "^4.0.3",
         "@rollup/plugin-commonjs": "^24.0.1",
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@types/node": "^18.13.0",
