--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "minimist": "^1.2.8",
         "rollup": "^3.15.0",
         "rollup-plugin-dts": "^5.1.1",
+        "rollup-plugin-minification": "^0.2.0",
         "rollup-plugin-postcss": "^4.0.2",
         "typescript": "^4.9.5"
     }
