--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@testuj.to/react",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "",
     "license": "MIT",
     "author": {
@@ -17,7 +17,9 @@
     "module": "./esm/index.js",
     "scripts": {
         "build:ts": "tsc",
-        "build:bundle": "rollup --config"
+        "build:bundle": "rollup --config",
+        "docs:build": "npm run build:ts && build-storybook --ci",
+        "docs:start": "npm run build:ts && NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 4000 --ci"
     },
     "dependencies": {
         "@radix-ui/react-checkbox": "^1.0.1",
@@ -27,12 +29,32 @@
         "@radix-ui/react-select": "^1.2.0",
         "@radix-ui/react-tabs": "^1.0.2",
         "@radix-ui/react-toast": "^1.1.2",
-        "@types/react": "^18.0.28",
         "classnames": "^2.3.2",
         "lodash.get": "^4.4.2",
+        "lodash.merge": "^4.6.2",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0"
     },
     "devDependencies": {
-        "@types/lodash.get": "^4.4.7"
+        "@babel/core": "^7.20.12",
+        "@storybook/addon-actions": "^6.5.16",
+        "@storybook/addon-essentials": "^6.5.16",
+        "@storybook/addon-interactions": "^6.5.16",
+        "@storybook/addon-links": "^6.5.16",
+        "@storybook/addons": "^6.5.16",
+        "@storybook/builder-webpack4": "^6.5.16",
+        "@storybook/client-logger": "^6.5.16",
+        "@storybook/components": "^6.5.16",
+        "@storybook/manager-api": "^7.0.0-alpha.54",
+        "@storybook/manager-webpack4": "^6.5.16",
+        "@storybook/react": "^6.5.16",
+        "@storybook/testing-library": "^0.0.13",
+        "@storybook/theming": "^6.5.16",
+        "@types/lodash.get": "^4.4.7",
+        "@types/lodash.merge": "^4.6.7",
+        "@types/react": "^18.0.28",
+        "babel-loader": "^8.3.0",
+        "memoizerific": "^1.11.3",
+        "react-dom": "^18.2.0"
     }
 }
