--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@testuj.to/react",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "",
     "license": "MIT",
     "author": {
@@ -18,7 +18,7 @@
     "scripts": {
         "build:ts": "tsc",
         "build:bundle": "rollup --config",
-        "docs:build": "npm run build:ts && build-storybook --ci",
+        "docs:build": "npm run build:ts && NODE_OPTIONS=--openssl-legacy-provider build-storybook",
         "docs:start": "npm run build:ts && NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 4000 --ci"
     },
     "dependencies": {
