--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -54,6 +54,7 @@
         "@types/lodash.merge": "^4.6.7",
         "@types/react": "^18.0.28",
         "babel-loader": "^8.3.0",
+        "chromatic": "^6.17.0",
         "memoizerific": "^1.11.3",
         "react-dom": "^18.2.0"
     }
