--- a/.github/workflows/storybook-react.yml
+++ b/.github/workflows/storybook-react.yml
@@ -22,6 +22,7 @@ jobs:
 
           cd packages/@testuj.to/react
           npm i
+          npm run build:ts
       - uses: chromaui/action@v1
         with:
           workingDir: packages/@testuj.to/react
