--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@testuj.to/react",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "description": "",
     "license": "MIT",
     "author": {
@@ -33,7 +33,8 @@
         "lodash.get": "^4.4.2",
         "lodash.merge": "^4.6.2",
         "prop-types": "^15.8.1",
-        "react": "^18.2.0"
+        "react": "^18.2.0",
+        "react-helmet-async": "^1.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.12",
