--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@testuj.to/react",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "description": "",
     "license": "MIT",
     "author": {
@@ -33,8 +33,10 @@
         "lodash.get": "^4.4.2",
         "lodash.merge": "^4.6.2",
         "prop-types": "^15.8.1",
-        "react": "^18.2.0",
         "react-helmet-async": "^1.3.0"
+    },
+    "peerDependencies": {
+        "react": "^18.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.12",
@@ -57,6 +59,7 @@
         "babel-loader": "^8.3.0",
         "chromatic": "^6.17.0",
         "memoizerific": "^1.11.3",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react": "^18.2.0"
     }
 }
