--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@testuj.to/react",
-    "version": "0.0.12",
+    "version": "0.0.13",
     "description": "",
     "license": "MIT",
     "author": {
@@ -33,7 +33,7 @@
         "lodash.get": "^4.4.2",
         "lodash.merge": "^4.6.2",
         "prop-types": "^15.8.1",
-        "react-helmet-async": "^1.3.0"
+        "react-helmet": "^6.1.0"
     },
     "peerDependencies": {
         "react": "^18.2.0"
@@ -56,10 +56,11 @@
         "@types/lodash.get": "^4.4.7",
         "@types/lodash.merge": "^4.6.7",
         "@types/react": "^18.0.28",
+        "@types/react-helmet": "^6.1.6",
         "babel-loader": "^8.3.0",
         "chromatic": "^6.17.0",
         "memoizerific": "^1.11.3",
-        "react-dom": "^18.2.0",
-        "react": "^18.2.0"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
