--- a/packages/@testuj.to/react/Makefile
+++ b/packages/@testuj.to/react/Makefile
@@ -1,14 +1,14 @@
 
-PATH_BUILD := build
-PATH_DIST := dist
+BUILD := build
+DIST := dist
 
-NPM_INCLUDE := .gitignore .npmignore README.md
+INCLUDE := README.md .npmignore .gitignore src/locales
 
 .PHONY: clean build build-storybook publish
 
 clean:
-	rm -Rf $(PATH_BUILD) || true
-	rm -Rf $(PATH_DIST) || true
+	rm -Rf $(BUILD) || true
+	rm -Rf $(DIST) || true
 
 build: clean
 	npm i
@@ -19,16 +19,16 @@ build: clean
 
 	npm run build:bundle
 
-	cp $(NPM_INCLUDE) $(PATH_DIST)
+	cp -r $(INCLUDE) $(DIST)
 
 	node ../../../scripts/preparePackageJson.js \
 		-i package.json \
-		-o $(PATH_DIST)/package.json
+		-o $(DIST)/package.json
 
 # build-storybook:
 # 	npm i
 # 	npm run docs:build
 
 publish:
-	cd $(PATH_DIST) && \
+	cd $(DIST) && \
 		npm publish --access public
