--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -22,6 +22,7 @@
         "docs:start": "npm run build:ts && start-storybook -p 4000 --ci"
     },
     "dependencies": {
+        "@radix-ui/react-accordion": "^1.1.1",
         "@radix-ui/react-checkbox": "^1.0.1",
         "@radix-ui/react-dropdown-menu": "^2.0.2",
         "@radix-ui/react-icons": "^1.1.1",
