--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -28,6 +28,7 @@
         "@radix-ui/react-icons": "^1.1.1",
         "@radix-ui/react-radio-group": "^1.1.1",
         "@radix-ui/react-select": "^1.2.0",
+        "@radix-ui/react-slider": "^1.1.1",
         "@radix-ui/react-tabs": "^1.0.2",
         "@radix-ui/react-toast": "^1.1.2",
         "classnames": "^2.3.2",
