--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-form": "^0.0.2",
     "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-portal": "^1.0.2",
     "@radix-ui/react-radio-group": "^1.1.1",
     "@radix-ui/react-select": "^1.2.0",
     "@radix-ui/react-slider": "^1.1.1",
@@ -37,6 +38,7 @@
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "prop-types": "^15.8.1",
+    "react-datepicker": "^4.11.0",
     "react-helmet": "^6.1.0"
   },
   "peerDependencies": {
