--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -23,6 +23,7 @@
     "docs:start": "npm run build:ts && NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 4000 --ci"
   },
   "dependencies": {
+    "@mantine/core": "^6.0.13",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
@@ -34,7 +35,10 @@
     "@radix-ui/react-slider": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.2",
+    "@tabler/icons": "^2.20.0",
     "classnames": "^2.3.2",
+    "draft-js": "^0.11.7",
+    "draftjs-utils": "^0.10.2",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "prop-types": "^15.8.1",
