--- a/packages/@testuj.to/react/tsconfig.json
+++ b/packages/@testuj.to/react/tsconfig.json
@@ -6,5 +6,6 @@
     "jsx": "react-jsx"
   },
   "include": ["./src"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+  "exclude": ["node_modules", "**/__tests__/*"],
+  "allowSyntheticDefaultImports": true
 }
