--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-form": "^0.0.2",
     "@radix-ui/react-icons": "^1.1.1",
