--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -19,8 +19,8 @@
     "build:ts": "tsc",
     "build:bundle": "rollup --config",
     "dev": "npm run docs:start",
-    "docs:build": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
-    "docs:start": "npm run build:ts && NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 4000 --ci"
+    "docs:build": "NODE_OPTIONS=--openssl-legacy-provider storybook build",
+    "docs:start": "npm run build:ts && NODE_OPTIONS=--openssl-legacy-provider storybook dev -p 4000 --ci"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.1",
@@ -28,6 +28,7 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-form": "^0.0.2",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-popover": "1.0.0",
     "@radix-ui/react-progress": "^1.0.3",
@@ -41,6 +42,7 @@
     "classnames": "^2.3.2",
     "draft-js": "^0.11.7",
     "draftjs-utils": "^0.10.2",
+    "hls.js": "^1.5.13",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "moment": "^2.29.4",
@@ -54,19 +56,19 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@rollup/plugin-json": "^6.0.0",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/addons": "^6.5.16",
-    "@storybook/builder-webpack4": "^6.5.16",
-    "@storybook/client-logger": "^6.5.16",
-    "@storybook/components": "^6.5.16",
-    "@storybook/manager-api": "^7.0.0-alpha.54",
-    "@storybook/manager-webpack4": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/theming": "^6.5.16",
+    "@storybook/addon-actions": "^8.1.11",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.4",
+    "@storybook/addons": "^7.6.17",
+    "@storybook/client-logger": "^8.1.11",
+    "@storybook/components": "^8.1.11",
+    "@storybook/manager-api": "^8.1.11",
+    "@storybook/react": "^8.1.11",
+    "@storybook/react-webpack5": "^8.1.11",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/theming": "^8.1.11",
     "@types/lodash.get": "^4.4.7",
     "@types/lodash.merge": "^4.6.7",
     "@types/react": "^18.0.28",
@@ -75,6 +77,8 @@
     "chromatic": "^6.17.0",
     "memoizerific": "^1.11.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-docgen-typescript-plugin": "^1.0.8",
+    "react-dom": "^18.2.0",
+    "storybook": "^8.1.11"
   }
 }
