--- a/packages/@testuj.to/react/package.json
+++ b/packages/@testuj.to/react/package.json
@@ -19,8 +19,8 @@
     "build:ts": "tsc",
     "build:bundle": "rollup --config",
     "dev": "npm run docs:start",
-    "docs:build": "NODE_OPTIONS=--openssl-legacy-provider storybook build",
-    "docs:start": "npm run build:ts && NODE_OPTIONS=--openssl-legacy-provider storybook dev -p 4000 --ci"
+    "docs:build": "cross-env NODE_OPTIONS=--openssl-legacy-provider storybook build",
+    "docs:start": "cross-env NODE_OPTIONS=--openssl-legacy-provider storybook dev -p 4000 --ci"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.1",
@@ -46,12 +46,12 @@
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "moment": "^2.29.4",
-    "prop-types": "^15.8.1",
     "react-datepicker": "^4.11.0",
     "react-helmet": "^6.1.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -77,11 +77,15 @@
     "@types/react-helmet": "^6.1.6",
     "babel-loader": "^8.3.0",
     "chromatic": "^6.17.0",
+    "cross-env": "^10.0.0",
     "jest": "^29.7.0",
     "memoizerific": "^1.11.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-docgen-typescript-plugin": "^1.0.8",
     "react-dom": "^18.2.0",
-    "storybook": "^8.1.11"
+    "storybook": "^8.1.11",
+    "tsc": "^2.0.4",
+    "typescript": "^5.9.2"
   }
 }
