fix: [TTV2-1418] - build

--- a/packages/@testuj.to/react/Makefile
+++ b/packages/@testuj.to/react/Makefile
@@ -13,9 +13,9 @@ clean:
 	rm -Rf $(DIST) || true
 
 build: clean
-	npm i
+	npm ci --only=production=false
 
-	npm run build:ts
+	npx tsc
 	node ../../../scripts/copyStyles.js \
 		--pkg package.json
 
